<resources>
    <string name="app_name">OneFoot World</string>
    <string name="navigation_view_header_title">Football Data</string>
    <string name="competition_bottom_menu">Competitions</string>
    <string name="competition_menu_title">Competitions</string>
    <string name="match_menu_title">Matches</string>
    <string name="favorite_menu_title">Favorite</string>
    <string name="competitions_title">Competitions</string>
    <string name="match_title">Matches</string>
    <string name="favorite_title">Favorite</string>
    <string name="all_matches">All matches</string>
    <string name="table">Table</string>
    <string name="teams">Teams</string>
    <string name="stats">Stats</string>
    <string name="top_scorers">Top scorers</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="thuesday">Thu</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="player_info">Player Information</string>
    <string name="results">Results</string>
    <string name="fixtures">Fixtures</string>
    <string name="getDate">%s %d %s %s</string>
    <string name="team_description">This is the team image</string>
    <string name="internet_connection_error">You are not connected to the Internet Please connect and try later</string>
    <string name="empty_favorite_list_title">There are no favorite teams or competitions</string>
    <string name="empty_match_list_title">There is no matches on the chosen date</string>
    <string name="score_separator">:</string>
    <string name="player">Player</string>
    <string name="value">Value</string>
    <string name="team">Team</string>
    <string name="pos">Pos</string>
    <string name="pts">Pts</string>
    <string name="gd">GD</string>
    <string name="l">L</string>
    <string name="d">D</string>
    <string name="w">W</string>
    <string name="p">P</string>
    <string name="ip">http://10.0.2.2:8080</string>
</resources>
